--- a/learn-react/demo3-antd/.gitignore
+++ b/learn-react/demo3-antd/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-*/node_modules
+/node_modules
 /.pnp
 .pnp.js
 
@@ -10,9 +10,7 @@
 
 # production
 /build
-**/dist/
-**/package-lock.json
-**/*.lock
+
 # misc
 .DS_Store
 .env.local
@@ -23,8 +21,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-.umi
-*.iml
-.idea
-node_modules
